--- a/src/assets/sass/_form.scss
+++ b/src/assets/sass/_form.scss
@@ -23,6 +23,10 @@
       outline: none;
       font-size: 18px;
       max-width: 100%;
+
+      @media screen and (max-width: 1200px) {
+        width: 100%;
+      }
     }
 
     button {
