--- a/src/assets/sass/_header.scss
+++ b/src/assets/sass/_header.scss
@@ -27,9 +27,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: $color-white;
+    z-index: 999999;
+    transition: 0.3s all;
 
     &.toggle {
       justify-content: center;
+      position: unset;
     }
     a {
       color: $color-black;
@@ -51,6 +59,29 @@
   &-nav {
     padding: 20px 12px;
     border: 1px solid $color-border;
+    background-color: $color-white;
+    border-width: 1px 0;
+    transition: margin 0.4s ease;
+
+    @media screen and (max-width: 768px) {
+      margin-left: -100%;
+      height: 0;
+      opacity: 0;
+    }
+
+    &.show {
+      position: fixed;
+      top: 60px;
+      z-index: 99999999;
+      left: 0;
+      width: 100%;
+
+      @media screen and (max-width: 768px) {
+        margin-left: 0;
+        height: 100vh;
+        opacity: 1;
+      }
+    }
 
     &-menu {
       display: flex;
@@ -59,10 +90,19 @@
       list-style: none;
       gap: 10px;
 
+      @media screen and (max-width: 768px) {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
       &-link {
         padding: 20px;
         font-weight: 600;
         font-size: 18px;
+
+        @media screen and (max-width: 768px) {
+          font-weight: 400;
+        }
       }
     }
   }
