--- a/src/assets/sass/_main.scss
+++ b/src/assets/sass/_main.scss
@@ -30,6 +30,11 @@
     gap: 0.5%;
     align-items: center;
     justify-content: space-between;
+
+    @media screen and (max-width: 768px) {
+      grid-template-columns: 49% 49%;
+      grid-gap: 1%;
+    }
   }
 }
 
@@ -42,6 +47,10 @@
     img {
       width: 100%;
       height: 380px;
+
+      @media screen and (max-width: 500px) {
+        height: 200px;
+      }
     }
   }
 
