--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -18,4 +18,9 @@ a {
 .container {
   max-width: 1200px;
   margin: auto;
+
+  @media screen and (max-width: 1200px) {
+    width: 100%;
+    padding: 0 20px;
+  }
 }
